--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <div class="div1"><br><br><br><br><br><br>
     <div class="cata">
-      <a href="https://icm.sustech.edu.cn/lidong/list/about1.html" target="test">Info</a>
+      <a href="about1.html" target="test">Info</a>
     </div>
     <br><br><br>
 
@@ -107,12 +107,12 @@
 
     <div class="cata">
       <!--<a> 标签的 target 属性规定在何处打开链接文档-->
-      <a href="https://icm.sustech.edu.cn/lidong/list/papers1.html" target="test"> Pub</a>
+      <a href="papers1.html" target="test"> Pub</a>
     </div>
     <br><br><br>
 
     <div class="cata">
-      <a href="https://icm.sustech.edu.cn/lidong/list/w.html" target="test"> &nbsp;  rep.</a>
+      <a href="w.html" target="test"> &nbsp;  rep.</a>
     </div>
 <!--    <br><br><br>
 
