--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
     <br><br><br>
 
 <!--    <div class="cata">
-      <a href="https://icm.sustech.edu.cn/lidong/list/news1.html" target="test">News</a>
+      <a href="news1.html" target="test">News</a>
     </div>
     <br><br><br>
 -->
 
 
     <div class="cata">
-      <a href="https://icm.sustech.edu.cn/lidong/list/seminar1.html" target="test">Talk</a>
+      <a href="seminar1.html" target="test">Talk</a>
     </div>
     <br><br><br>
     <div class="cata">
-      <a href="https://icm.sustech.edu.cn/lidong/list/KyLin1.html" target="test">Kylin</a>
+      <a href="KyLin1.html" target="test">Kylin</a>
     </div>
 <!--    <br><br><br>
     <div class="cata">
