--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       if (url) {
         $('.div2 iframe').attr('src', url)
       } else {
-        $('.div2 iframe').attr('src', 'https://icm.sustech.edu.cn/lidong/list/about1.html')
+        $('.div2 iframe').attr('src', 'about1.html')
       }
     })
   </script>
