--- a/KyLin1.html
+++ b/KyLin1.html
@@ -75,7 +75,7 @@ if(document.addEventListener){
 
 </script>
   <div align=right>
-<a href="https://icm.sustech.edu.cn/lidong/" target="_parent">Homepage</a></div>
+<a href="index.html" target="_parent">Homepage</a></div>
 
 
  <div  style="background-color:white;">
