--- a/KyLin1.html
+++ b/KyLin1.html
@@ -75,7 +75,7 @@ if(document.addEventListener){
 
 </script>
   <div align=right>
-<a href="index.html" target="_parent">Homepage</a></div>
+<a href="about1.html" target="_parent">Homepage</a></div>
 
 
  <div  style="background-color:white;">
@@ -876,5 +876,5 @@ Furthermore, we also proved the first probabilistic global result for 3D defocus
 
 <br>
 <div align=right>
-<a href="index.html" target="_parent">Homepage</a></div>
+<a href="about1.html" target="_parent">Homepage</a></div>
 </body></html>
