--- a/seminar1.html
+++ b/seminar1.html
@@ -976,5 +976,5 @@ pen questions.
 </div>
 <br>
 <div align=right>
-<a href="https://icm.sustech.edu.cn/lidong/" target="_parent">Homepage</a></div>
+<a href="https://sanyutsing.github.io/xinyucheng/" target="_parent">Homepage</a></div>
 </body></nqizhigu Building, No.1 Tangling Road, Nanshan Districthtml>
