--- a/papers1.html
+++ b/papers1.html
@@ -117,7 +117,7 @@ if(document.addEventListener){
                                     <br /><br><br>
                                 <a href="#id-5">N.A. </a></li>
                                     <br /><br><br>
-                                <a href="https://icm.sustech.edu.cn/lidong/" target="_parent">Home</a>
+                                <a href="https://sanyutsing.github.io/xinyucheng/" target="_parent">Home</a>
                                     <br /><br><br>    
                              </ol>
                                      </ul>
